--- a/index.html
+++ b/index.html
@@ -14,32 +14,37 @@
 
 </head>
 <body>
-	<div class="main"></div>
-	<div class="contact-block fade-box">
-		<p class="unhidden">CONTACT</p>
-		<div class="hidden">
-			<span><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>: <a href="mailto:jeanelieexavier@gmail.com">JeanElieExavier@Gmail.com</a></span>
-			<span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i>: <a href="tel:857-615-1954">857-615-1954</a></span>
+	<div class="clearfix not-sorry">
+		<div class="main"></div>
+		<div class="contact-block fade-box">
+			<p class="unhidden">CONTACT</p>
+			<div class="hidden">
+				<span><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>: <a href="mailto:jeanelieexavier@gmail.com">JeanElieExavier@Gmail.com</a></span>
+				<span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i>: <a href="tel:857-615-1954">857-615-1954</a></span>
+			</div>
+		</div>
+		<div class="about-me-block fade-box">
+			<p class="unhidden">ABOUT ME</p>
+			<div>
+				<p class="hidden">From amateur skateboarder to a Full-Fledged Web Developer. Ever since I was a young man skating the streets of Florida, I was crazy about ones and zeros and you can make nothing into something on anything with a screen. I didn’t start chasing this curiosity until I moved to Boston and got into a really bad skateboarding accident. Not being able to skateboard until my body was healed made me depressed so I put my energy towards school. My history teacher realized that I’m a sticklers for numbers and found a program called resilient coders. Made an appointment to meet with Del, Founder and CEO of Resilient Coders, and from there history was made.</p>
+			</div>
+		</div>
+		<div class="social-media-block fade-box">
+			<p class="unhidden">SOCIAL MEDIA</p>
+			<div class="hidden">
+				<a href="https://www.linkedin.com/in/jeanex/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/ps_jay/" target="_blank"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a>
+				<a href="https://twitter.com/ps_jayy" target="_blank"><i class="fa fa-twitter-square fa-5x" aria-hidden="true"></i></a>
+				<a href="#"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
+				<a href="https://www.snapchat.com/add/ps_jay" target="_blank"><i class="fa fa-snapchat-square fa-5x" aria-hidden="true"></i></a>
+			</div>
+		</div>
+		<div class="name-block fade-box">
+			<h1>Jean E. Exavier</h1>
 		</div>
 	</div>
-	<div class="about-me-block fade-box">
-		<p class="unhidden">ABOUT ME</p>
-		<div>
-			<p class="hidden">From amateur skateboarder to a Full-Fledged Web Developer. Ever since I was a young man skating the streets of Florida, I was crazy about ones and zeros and you can make nothing into something on anything with a screen. I didn’t start chasing this curiosity until I moved to Boston and got into a really bad skateboarding accident. Not being able to skateboard until my body was healed made me depressed so I put my energy towards school. My history teacher realized that I’m a sticklers for numbers and found a program called resilient coders. Made an appointment to meet with Del, Founder and CEO of Resilient Coders, and from there history was made.</p>
-		</div>
-	</div>
-	<div class="social-media-block fade-box">
-		<p class="unhidden">SOCIAL MEDIA</p>
-		<div class="hidden">
-			<a href="https://www.linkedin.com/in/jeanex/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-			<a href="https://www.instagram.com/ps_jay/" target="_blank"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a>
-			<a href="https://twitter.com/ps_jayy" target="_blank"><i class="fa fa-twitter-square fa-5x" aria-hidden="true"></i></a>
-			<a href="#"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
-			<a href="https://www.snapchat.com/add/ps_jay" target="_blank"><i class="fa fa-snapchat-square fa-5x" aria-hidden="true"></i></a>
-		</div>
-	</div>
-	<div class="name-block fade-box">
-		<h1>Jean E. Exavier</h1>
+	<div class="sorry">
+		<p>SORRY! The size of the window you are trying to view this website is too small.</p>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
