--- a/index.html
+++ b/index.html
@@ -17,30 +17,36 @@
 	<div class="clearfix not-sorry">
 		<div class="main"></div>
 		<div class="contact-block fade-box">
-			<p class="unhidden">CONTACT</p>
+			<p class="xhidden">CONTACT</p>
 			<div class="hidden">
 				<span><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>: <a href="mailto:jeanelieexavier@gmail.com">JeanElieExavier@Gmail.com</a></span>
-				<span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i>: <a href="tel:857-615-1954">857-615-1954</a></span>
+				<span><i class="fa fa-mobile fa-2x" aria-hidden="true"></i>: <a href="tel:+1-857-244-9975">(857)-244-9975</a></span>
 			</div>
 		</div>
 		<div class="about-me-block fade-box">
-			<p class="unhidden">ABOUT ME</p>
+			<p class="xhidden">ABOUT ME</p>
 			<div>
-				<p class="hidden">From amateur skateboarder to a Full-Fledged Web Developer. Ever since I was a young man skating the streets of Florida, I was crazy about ones and zeros and you can make nothing into something on anything with a screen. I didn’t start chasing this curiosity until I moved to Boston and got into a really bad skateboarding accident. Not being able to skateboard until my body was healed made me depressed so I put my energy towards school. My history teacher realized that I’m a sticklers for numbers and found a program called resilient coders. Made an appointment to meet with Del, Founder and CEO of Resilient Coders, and from there history was made.</p>
+				<p class="hidden">Magic could be wield with specific combinations with only 2 numbers</p>
 			</div>
 		</div>
 		<div class="social-media-block fade-box">
-			<p class="unhidden">SOCIAL MEDIA</p>
+			<p class="xhidden">SOCIAL MEDIA</p>
 			<div class="hidden">
 				<a href="https://www.linkedin.com/in/jeanex/" target="_blank"><i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
 				<a href="https://www.instagram.com/ps_jay/" target="_blank"><i class="fa fa-instagram fa-5x" aria-hidden="true"></i></a>
 				<a href="https://twitter.com/ps_jayy" target="_blank"><i class="fa fa-twitter-square fa-5x" aria-hidden="true"></i></a>
-				<a href="#"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
+				<a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i></a>
 				<a href="https://www.snapchat.com/add/ps_jay" target="_blank"><i class="fa fa-snapchat-square fa-5x" aria-hidden="true"></i></a>
 			</div>
 		</div>
 		<div class="name-block fade-box">
 			<h1>Jean E. Exavier</h1>
+			 <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+      <iframe id="youtube-video" width="0" height="0" 
+            src="https://www.youtube.com/embed/fKD0RHBvmzY?autoplay=1&loop=1&playlist=YOUR_VIDEO_ID&controls=0&modestbranding=1&showinfo=0&rel=0&mute=1" 
+            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
+ </div>
 		</div>
 	</div>
 	<div class="sorry">
